[package]
name = "integral-db"
description = "High throughput persistence layer optimized for concurrent reads and writes."
version = "0.1.0"
authors = ["VRRB Labs <info@vrrb.io>"]
edition = "2021"
readme = "README.md"

[lib]
name = "integral_db"
path = "lr_trie/src/lib.rs"

[workspace]
members = [
    "lr_trie",
]

[dependencies]
left-right = "0.11.5"
patriecia = { workspace = true }
serde = { version = "1.0.144", features = ["derive"] }
keccak-hash = "0.9"
parking_lot = "0.12"
rlp = "0.5.1"
thiserror = "1.0"
bincode = "1.3.3"
rand = { version = "0.8.5", features = ["std"] }
hex = "*"
criterion = "0.3.5"
ethereum-types = "0.13.1"
uuid = { version = "1.3.1", features = ["v4", "serde"] }
tracing = "0.1.37"

[workspace.dependencies]
left-right = "0.11.5"
patriecia = { path = "../patriecia" }
serde = { version = "1.0.144", features = ["derive"] }
keccak-hash = "0.9"
parking_lot = "0.12"
rlp = "0.5.1"
thiserror = "1.0"
bincode = "1.3.3"
rand = { version = "0.8.5", features = ["std"] }
hex = "*"
criterion = "0.3.5"
ethereum-types = "0.13.1"
uuid = { version = "1.3.1", features = ["v4", "serde"] }
tracing = "0.1.37"

[dev-dependencies]
rand = { workspace = true }
hex = { workspace = true }
criterion = { workspace = true }
ethereum-types = { workspace = true }
uuid = { workspace = true }
