[package]
name = "integral-db"
description = "High throughput persistence layer optimized for concurrent reads and writes."
version = "0.1.0"
authors = ["VRRB Labs <info@vrrb.io>"]
edition = "2021"
readme = "README.md"

[lib]
name = "integral_db"
path = "src/db_tables/src/lib.rs"

[workspace]
members = [
    "src/lr_trie",
    "src/db_tables"
]

[dependencies]
left-right = "0.11.5"
patriecia = { workspace = true }
serde = { version = "1.0.144", features = ["derive"] }
keccak-hash = "0.9"
parking_lot = "0.12"
rlp = "0.5.1"
thiserror = "1.0"
bincode = "1.3.3"
rand = { version = "0.8.5", features = ["std"] }
hex = "*"
criterion = "0.3.5"
ethereum-types = "0.13.1"
uuid = { version = "1.3.1", features = ["v4", "serde"] }
tracing = "0.1.37"
rocksdb = { workspace = true }
secp256k1 = { workspace = true }
serde_json = { workspace = true }
serial_test = { workspace = true }
sha2 = { workspace = true }
lr_trie = { workspace = true }
kademlia-dht = { workspace = true }
anyhow = { workspace = true }

[workspace.dependencies]
left-right = "0.11.5"
patriecia = { path = "../patriecia" }
serde = { version = "1.0.144", features = ["derive"] }
keccak-hash = "0.9"
parking_lot = "0.12"
rlp = "0.5.1"
thiserror = "1.0"
bincode = "1.3.3"
rand = { version = "0.8.5", features = ["std"] }
hex = "*"
criterion = "0.3.5"
ethereum-types = "0.13.1"
uuid = { version = "1.3.1", features = ["v4", "serde"] }
tracing = "0.1.37"
rocksdb = "0.19.0"
secp256k1 = { version = "0.25.0", features = [
    "rand",
    "serde",
    "bitcoin_hashes",
    "global-context",
] }
serde_json = "1.0.64"
serial_test = "0.9.0"
sha2 = "0.10.6"
lr_trie = { path = "./src/lr_trie" }
kademlia-dht = { git = "https://github.com/vrrb-io/kademlia-dht-rs" }
anyhow = "1"

[dev-dependencies]
rand = { workspace = true }
hex = { workspace = true }
criterion = { workspace = true }
ethereum-types = { workspace = true }
uuid = { workspace = true }
