[package]
name = "integral-db"
description = "High throughput persistence layer optimized for concurrent reads and writes."
version = "0.1.0"
authors = ["VRRB Labs <info@vrrb.io>"]
edition = "2021"
readme = "README.md"

[lib]
name = "integral_db"
path = "lr_trie/src/lib.rs"

[workspace]
members = [
    "lr_trie",
    "db_adapter",
]

[dependencies]
anyhow = { workspace = true }
left-right = "0.11.5"
patriecia = { workspace = true }
serde = { version = "1.0.144", features = ["derive"] }
keccak-hash = "0.9"
parking_lot = "0.12"
rlp = "0.5.1"
thiserror = "1.0"
bincode = "1.3.3"
rand = { version = "0.8.5", features = ["std"] }
hex = "*"
criterion = "0.3.5"
ethereum-types = "0.13.1"
uuid = { version = "1.3.1", features = ["v4", "serde"] }
tracing = "0.1.37"
db_adapter = { workspace = true }
indexmap = { workspace = true }

[workspace.dependencies]
anyhow = "1"
left-right = "0.11.5"
patriecia = { git = "https://github.com/versatus/patriecia" }
serde = { version = "1.0.144", features = ["derive"] }
keccak-hash = "0.9"
parking_lot = "0.12"
rlp = "0.5.1"
thiserror = "1.0"
bincode = "1.3.3"
rand = { version = "0.8.5", features = ["std"] }
hex = "*"
criterion = "0.3.5"
ethereum-types = "0.13.1"
uuid = { version = "1.3.1", features = ["v4", "serde"] }
tracing = "0.1.37"
db_adapter = { path = "./db_adapter" }
indexmap = { version = "1.3.2", features = ["serde-1"] }

[dev-dependencies]
rand = { workspace = true }
hex = { workspace = true }
criterion = { workspace = true }
ethereum-types = { workspace = true }
uuid = { workspace = true }
